force.com/CALM/src/objects/ActionNode__c.object
<CustomObject>
    <description>Node of action</description>
    <fields>
        <fullName>Count__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Count</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>dt__c</fullName>
        <label>Action Type</label>
        <picklist>
            <picklistValues>
                <fullName>e</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>s</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>level__c</fullName>
        <label>Level</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>parent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent</label>
        <referenceTo>ActionNode__c</referenceTo>
        <relationshipLabel>Children</relationshipLabel>
        <relationshipName>Parent</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>ActionNode</label>
    <nameField>
        <label>ActionNode Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ActionNodes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>